--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@tanstack/react-query": "^5.81.5",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.0",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
+    "react-modal": "^3.16.3",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
