--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-query": "^5.81.5",
+    "@tanstack/react-query": "^5.83.0",
+    "emoji-picker-react": "^4.13.2",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.0",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.1",
     "react-modal": "^3.16.3",
     "react-router": "^7.6.2",
