--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "emoji-picker-react": "^4.13.2",
     "firebase": "^11.9.1",
     "framer-motion": "^12.19.0",
+    "i18next": "^25.3.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.525.0",
+    "npm": "^11.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.1",
+    "react-i18next": "^15.6.0",
     "react-modal": "^3.16.3",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
