--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.6.0",
+    "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
