--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
+    "react-responsive": "^10.0.1",
     "react-router": "^7.6.2",
     "react-spinners": "^0.17.0",
     "react-toastify": "^11.0.5",
