--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "^7.58.1",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.3.0",
     "react-modal": "^3.16.3",
     "react-responsive": "^10.0.1",
     "react-router": "^7.6.2",
